# ROS2_iNAT

./: LICENSE  README.md
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Reboot.action
src/interfaces/msg/: Array.msg
src/interfaces/srv/: ExtAidHdg.srv  ExtAidHeight.srv  ExtAidPosEcef.srv  ExtAidPosLlh.srv  ExtAidPosMgrs.srv  ExtAidPosUtm.srv  ExtAidVel.srv  ExtAidVelBody.srv
src/ixcom_driver/: package.xml  pytest.ini  setup.cfg  setup.py
src/ixcom_driver/integrationTests/: NavSatFixINSTopicMsgs.csv  config.json  iMARPythonLib.py  imuTopicMsgs.csv  initTestNode.py  settings.json  test_compareiNATOutputWithTopic.py  test_headerTimeDiff.py  test_integrationstests.py
src/ixcom_driver/ixcom_driver/: ixcom_driver_client.py  ixcom_driver_publisher.py  ixcom_driver_subscriber.py  ixcom_driver_subscriber_integrationTests.py
src/ixcom_driver/ixcom_driver/mypy/: exceptions.py  fun.py  imu.py  log.py  magneticfield.py  navsatfix.py  navsatfix_ins.py  navsatstatus.py  odometry.py  posewithcovariancestamped.py  timereference.py  twiststamped.py
src/ixcom_driver/params/: config.json
src/ixcom_driver/test/: test_config.py  test_config_inat.py  test_pub.py
src/ixcom_driver/test/config/: config_corrupted.json  config_missing_keys.json  config_too_much_topics.json
src/ixcom_driver/test/dummy/: dummy_node.py
src/ixcom_driver/test/mock/: mock_client.py  mock_imu.py  mock_magneticfield.py  mock_msg.py  mock_navsatfix.py  mock_navsatfixins.py  mock_navsatstatus.py  mock_odometry.py  mock_posestamped.py  mock_posewithcovariancestamped.py  mock_publisher.py  mock_timereference.py  mock_twistwithcovariancestamped.py
src/ixcom_driver_lc/: CMakeLists.txt  package.xml
src/ixcom_driver_lc/include/ixcom_driver_lc/: ixcom_driver_conf.hpp  ixcom_driver_lifecycle_node.hpp
src/ixcom_driver_lc/include/ixcom_driver_lc/modules/: imu.hpp  magnetic_field.hpp  nav_gnss.hpp  nav_ins.hpp  navsatstatus.hpp  odometry.hpp  pose_ecef.hpp  srv_extaid.hpp  time_reference.hpp  transform.hpp  twist.hpp  utility.hpp
src/ixcom_driver_lc/include/libxcom/: README.md  private_filter.py
src/ixcom_driver_lc/include/libxcom/app/: xcomhandler.cpp  xcomhandler.hpp
src/ixcom_driver_lc/include/libxcom/include/ixcom/: XCOMdat.h  command_handler.h  crc16.h  error_handler.h  ixcom.h  message_handler.h  message_traits.h  parameter_handler.h  parameter_traits.h  plugin.h  response_handler.h  tcp_client.h  xcom_parser.h  xcom_stdio.h
src/ixcom_driver_lc/include/libxcom/src/: crc16.cpp  ixcom.cpp  message_traits.h  parameter_traits.h  tcp_client.cpp  xcom_parser.cpp
src/ixcom_driver_lc/launch/: autostart.launch.py
src/ixcom_driver_lc/params/: default.yml  publisher_config.yml
src/ixcom_driver_lc/src/: ixcom_driver_lifecycle_node.cpp
src/ixcom_driver_lc/src/modules/: imu.cpp  magnetic_field.cpp  nav_gnss.cpp  nav_ins.cpp  navsatstatus.cpp  odometry.cpp  pose_ecef.cpp  srv_extaid.cpp  time_reference.cpp  transform.cpp  twist.cpp  utility.cpp
src/ixcom_driver_lc/test/: common_test.cpp
src/service_adapter/: CMakeLists.txt  ToDo.txt  package.xml
src/service_adapter/include/service_adapter/: service_adapter.hpp
src/service_adapter/src/: service_adapter.cpp
