<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ixcom_driver</name>
  <version>0.1.0</version>
  <description>ixcom_driver is a iNAT data publisher</description>
  <maintainer email="p.ziegler@imar-navigation.de">zp</maintainer>
  <license>MIT</license>
<!--   These test dependencies are optional. Their purpose is to make sure that the code passes the linters. -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_config</test_depend>
  <test_depend>ament_config_inat</test_depend>
  <test_depend>ament_pub</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
